--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,11 @@ spring.mvc.locale=en_US
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
-spring.datasource.url=jdbc:db2://localhost:50002/testdb
+spring.datasource.url=jdbc:db2://localhost:50003/market
 spring.datasource.username=db2inst1
 spring.datasource.password=netbay@123
 spring.jpa.database-platform =org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto = update
 
 #`hibernate_sequence' doesn't exist
@@ -35,3 +35,5 @@ spring.mail.username=boonyaris.pen@gmail.com
 spring.mail.password=ympkaswkukmxzadg
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.mvc.pathmatch.matching-strategy =ant_path_matcher
