--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,26 @@
 			<version>5.2.2</version>
 		</dependency>
 
+<!--		unittest validator-->
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.0.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator-annotation-processor</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>jakarta.el</artifactId>
+		</dependency>
+
+
 		<!--		rabbit MQ-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
