change swagger and location repo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.servlet.context-path=/enjoy
+server.servlet.context-path=/ecommerce
 server.port=8084
 spring.mvc.locale=en_US
 # ===============================
@@ -6,7 +6,7 @@ spring.mvc.locale=en_US
 # ===============================
 spring.datasource.url=jdbc:db2://localhost:50003/market
 spring.datasource.username=db2inst1
-spring.datasource.password=netbay@123
+spring.datasource.password=db2inst12
 spring.jpa.database-platform =org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto = update
@@ -36,4 +36,4 @@ spring.mail.password=ympkaswkukmxzadg
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.mvc.pathmatch.matching-strategy =ant_path_matcher
+spring.mvc.pathmatch.matching-strategy =ant-path-matcher
