--- a/pom.xml
+++ b/pom.xml
@@ -235,6 +235,12 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 			<version>2.5.6</version>
 		</dependency>
+<!--		sms-->
+		<dependency>
+			<groupId>com.twilio.sdk</groupId>
+			<artifactId>twilio</artifactId>
+			<version>8.36.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
